<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffebebeb"
    android:orientation="vertical" >

    
     <include layout="@layout/wx_common_title" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/bg_loginFragment_line" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/bg_loginFragment_line" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:background="@color/bg_loginFragment_line" />

    <LinearLayout
        android:id="@+id/llyt_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/et_bg_loginfragment"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_options_lefticon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_username"
            android:visibility="visible" />

        <EditText
            android:id="@+id/et_forget_username"
            style="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/font_loginFragment" />

        <ImageView
            android:id="@+id/iv_forget_password_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_input_error"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="30dp"
            android:background="@color/bg_loginFragment_line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/et_bg_loginfragment"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_options_lefticon04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_username"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/et_forget_vertification"
            style="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/vertification"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/font_loginFragment" />

        <ImageView
            android:id="@+id/iv_forget_password_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_username"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp" >

            <Button
                android:padding="3dp"
                android:id="@+id/btn_forget_password_vertification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/btn_startpage_004_sl"
                android:text="@string/get_verificaton"
                android:textColor="#ffffffff"
                android:textSize="14sp" />

            <Chronometer
                android:padding="8dp"
                android:id="@+id/chm_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffeaeaea"
                android:textColor="#ffffffff"
                android:textSize="16sp"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/bg_loginFragment_line" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:background="@color/bg_loginFragment_line" />

    <LinearLayout
        android:id="@+id/llyt_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/et_bg_loginfragment"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_options_lefticon02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_password"
            android:visibility="visible" />

        <EditText
            android:id="@+id/et_old_password"
            style="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/font_loginFragment" />

        <ImageView
            android:id="@+id/iv_forget_password_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_input_error"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="30dp"
            android:background="@color/bg_loginFragment_line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/et_bg_loginfragment"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_login_password"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/et_new_password"
            style="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:background="@null"
            android:hint="@string/repeat_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/font_loginFragment" />

        <ImageView
            android:id="@+id/iv_forget_password_repassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_input_error"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/bg_loginFragment_line" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:background="@color/bg_loginFragment_line" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/bg_loginFragment_line" />

    <Button
        android:id="@+id/btn_forget_password_ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_startpage_004_sl"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textColor="#ffffff"
        android:textSize="@dimen/Login_Text_Size" />

</LinearLayout>